added some comments and docs